Changelog:

3.6
- You can now rightclick on quests in the "Questlog" tab to move quests between "Questlog" and "Optional". Please let us know if you find any issues with this!
- Added comments to "Two Halves Become One",  "The Calling" and "Armaments of War"
- Removed "The Calling" and "Armaments of War" from Solo route, as it still requires a party in TBC


3.5
- Removed Strange Sources turnin in Quest prep
- Added optional warning for Reliquary of Purity (better optional message for all still pending)
- Added additional flight step for Flame Crest in UBRS guide
- Fixed text and use item for Egg Collection
- Fixed Alexi Barov coordinates

3.4c
- Fixed a bug on Strat/Main Route with Heart of the Mountain

3.4b
- Reduced the filesize of most images
- Fixed a bug on the Solo Route

3.4
- Added support for quests that have scaling experience (AV). There's not enough data for a perfect formula, but we estimate the exp based on confirmed lvl 62 values from last TBC Classic with video proof
- AV/Tarren Mill has been added back to the Solo route now - It's worth the 5 minutes of flying when the quests scale
- This also means Summoning Shadra & Venom to the Undercity is now available for the Solo Route
- Added comments to some quests on the quest tooltips in the Custom UI 
- Removed "Twilight Lexicon" and "The Deserter" as Questlog quests and added as Turnin instead
- Reduced filesize by making the Route Selection background image smaller

3.3
- Rightclicking on an item will let you mark it as Collected on another character/mailbox
- It's now possible to shift-click items in the Items tab to link them, and ctrl-click to open the dressing room
- Removed Of Love and Family from Strat prep guide
- Added Williden's Journal and Blasted Lands item quests as turnin quests again (low exp)
- Added missing target for Huum Wildmane and Layo
- Added tooltips to the Items tab in the UI
- Quests on tooltips on the Route tab now include what type the quest is (questlog, optional, turnin)